writing history posts

--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -57,6 +57,8 @@
         </div>
 
         <div>
+            <div class="info_text just_left">@Model.dt.Rows.Count rows</div>
+
             <table class="dt">
                 @{
                     <tr>
