--- a/Pages/Shared/_PlainDataTablePartial.cshtml
+++ b/Pages/Shared/_PlainDataTablePartial.cshtml
@@ -13,6 +13,7 @@
     if (@Model.dt is not null)
     {
         <div class="data_table_div">
+            <div class="info_text just_left">@Model.dt.Rows.Count rows</div>
 
             <table id="results_table" class="dt">
                 @{
