--- a/wwwroot/css/budoco.css
+++ b/wwwroot/css/budoco.css
@@ -580,3 +580,41 @@ textarea#sql {
     grid-row-start: 8;
     grid-column-start: 2;
 }
+
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100vh;
+}
+
+    .modal .window {
+        width: 700px;
+        background-color: #fff;
+        margin: 0 auto;
+        top: -1000px;
+        opacity: 0;
+        position: relative;
+        border-radius: 5px;
+    }
+
+        .modal .window .header {
+            padding: 20px 20px 0;
+        }
+
+        .modal .window .body {
+            max-height: calc(100vh - 400px);
+            overflow-y: auto;
+            padding: 20px;
+        }
+
+        .modal .window .footer {
+            padding: 0 20px 20px;
+        }
