--- a/Pages/Shared/_layout_logged_in.cshtml
+++ b/Pages/Shared/_layout_logged_in.cshtml
@@ -102,6 +102,18 @@
                 @RenderBody()
             </div>
 
+
+            <div id='modal' class='modal' style="display:none">
+                <div class='window'>
+                    <div class='header'></div>
+                    <div class='body'></div>
+                    <div class='footer'>
+                        <button class='btn'>Close</button>
+                    </div>
+                </div>
+            </div>
+
+
             <script src="~/lib/jquery/dist/jquery.min.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
 
