--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -16,7 +16,8 @@
                         if (changed_field == "Description" || changed_field == "Details")
                         {
                             <div class="info_text history">
-                                @changed_field changed <a href="#" class="history-ref" data-before="@before_val" data-after="@after_val">[click to view]</a>
+                                @changed_field changed <a href="#" class="history-ref" data-before="@before_val"
+                                    data-after="@after_val">[view]</a>
                                 by @dr["us_username"] on @dr["p_created_date"]&nbsp;&nbsp;post #@p_id
                             </div>
                         }
