--- a/wwwroot/css/budoco.css
+++ b/wwwroot/css/budoco.css
@@ -586,35 +586,57 @@ textarea#sql {
 .modal {
     display: none;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
     z-index: 100;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     height: 100vh;
+    border-radius: 6px;
+    /*
+    opacity: .6;
+    background-color: lightgray;
+    */
 }
 
-    .modal .window {
-        width: 700px;
-        background-color: #fff;
+    .modal>.window {
+        width: 800px;
         margin: 0 auto;
         top: -1000px;
-        opacity: 0;
         position: relative;
-        border-radius: 5px;
+        background-color: #eeeeee;
+        border: 2px solid lightgray;
+        border-radius: 15px;
+       
+        /* this line doesn't work!?!?! */
+        opacity: 1 !important;
     }
 
-        .modal .window .header {
-            padding: 20px 20px 0;
+        .modal>.window>.header {
+            margin: 0px;
+            padding-left: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            background-color: transparent;
         }
 
-        .modal .window .body {
+        .modal>.window>.body {
             max-height: calc(100vh - 400px);
             overflow-y: auto;
-            padding: 20px;
+
+            margin: 0px;
+            padding: 5px;
+            background: white;
+            
         }
 
-        .modal .window .footer {
-            padding: 0 20px 20px;
+        .modal>.window>.footer {
+            padding-left: 10px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        
+            background-color: transparent;
+            margin: 0px;
+         
+            
         }
