--- a/Pages/Report/Edit.cshtml
+++ b/Pages/Report/Edit.cshtml
@@ -8,7 +8,7 @@
 <h1>@(Model.id == 0 ? "Create" : "Update") @ViewData["Title"]</h1>
 
 <div>
-    <a asp-page="Index">Back to Reports</a>
+    <a asp-page="Reports">Back to Reports</a>
 </div>
 
 <partial name="_FlashPartial" />
