--- a/Pages/Report/ViewReport.cshtml
+++ b/Pages/Report/ViewReport.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
-@model ViewModel
+@model ViewReportModel
 
 <h1>@ViewData["Title"]</h1>
 
 <div>
-    <a asp-page="Index">Back to Reports</a>
+    <a asp-page="Reports">Back to Reports</a>
 </div>
 
 <partial name="_ReportDataTablePartial" />
