--- a/Pages/Report/Delete.cshtml
+++ b/Pages/Report/Delete.cshtml
@@ -8,7 +8,7 @@
 <h1>Confirm delete of report</h1>
 
 <div>
-    <a asp-page="Index">Back to Reports</a>
+    <a asp-page="Reports">Back to Reports</a>
 </div>
 
 <partial name="_FlashPartial" />
